--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   },
   "dependencies": {
     "axios": "0.18.1",
+    "body-parser": "^1.20.0",
     "core-js": "3.6.5",
     "echarts": "^5.3.3",
     "element-ui": "2.13.2",
+    "express": "^4.18.1",
     "js-cookie": "2.2.0",
+    "mysql": "^2.18.1",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
